...
        emptyStateView.bindConstraintsToSuperview()
    }
    
    private func setupNavBar() {
        title = "Petites annonces"
        
        let filterButton = UIBarButtonItem(image: #imageLiteral(resourceName: "filter"), style: .done, target: self, action: #selector(filterPushed))
        filterButton.tintColor = .white
        filterButton.accessibilityIdentifier = "filterButton"
        navigationItem.setRightBarButton(filterButton, animated: true)
    }
    
    private func setupTableView() {
        tableView.accessibilityIdentifier = "listTableView"
        tableView.backgroundColor = .background
        tableView.separatorStyle = .none
        
        tableView.dataSource = self
        tableView.delegate = self
        
...
